--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "modernizr": "~2.8.3",
     "requirejs": "~2.1.14",
     "jquery-tiny-pubsub": "~0.7.0",
-    "angular-route": "~1.3.0"
+    "angular-route": "~1.3.0",
+    "angular-local-storage": "~0.1.5"
   },
   "devDependencies": {
     "almond": "~0.3.0",
